Add workaround for gcc bug 58541

The bug in question causes a "redeclaration differs in constexpr" error, despite the standard not requiring this.
This bug is fixed in newer versions of gcc.
More information can be found [here](https://gcc.gnu.org/bugzilla/show_bug.cgi?id=58541).